--- a/q1/style.css
+++ b/q1/style.css
@@ -6,12 +6,22 @@ h1{
     color: #2c3e50;
 }
 .card{
+    background: #f9f9f9;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    border-radius: 12px;
     transition: transform 0.2s ease;
+    padding: 16px;
+    text-align: center;
+    min-height: 350px;
 }
 .card:hover{
-    transform: scale(1.03);
+    transform: scale(1.02);
+}
+.card-title{
+    color: #396da1;
+}
+.text-muted{
+    font-weight: bold;
 }
 .card-img-top{
     height: 180px;
