--- a/q2/style.css
+++ b/q2/style.css
@@ -11,20 +11,21 @@ body{
     color: white;
     text-align: center;
     padding:16px;
+    height: auto; 
 }
 .layout {
     display: flex;
     flex-direction: row;
-    padding: 16px;
     gap: 16px;
+    align-items: flex-start;
+    box-sizing: border-box;
 }
 .side-nav{
     position: sticky;
-    top: 150px;
-    align-self: flex-start;
+    top: 160px;
     background-color: white;
     padding: 16px;
-    width: 180px;
+    width: 8%;
     border-radius: 10px;
     box-shadow: 0 0 6px rgba(0,0,0,0.1);
     height: fit-content;
@@ -44,16 +45,19 @@ body{
 .survival-section {
     display: flex;
     justify-content: center;
-    padding: 2rem 1rem;
+    padding:0; 
+    margin: 0;
+    flex: 1; 
+    padding-bottom: 50px;
 }
 .cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 32px;
-    padding: 32px;
+    padding: 0;
     max-width: 1200px;
-    margin: auto;
+    margin: 0;
     box-sizing: border-box;
 }
 .card {
@@ -68,6 +72,7 @@ body{
     box-sizing: border-box;
     position: relative;
     transition: transform 0.2s ease;
+    margin:10px ;
     scroll-margin-top:160px ;
 }
 .card-label {
@@ -90,7 +95,7 @@ body{
 }
 .card img{
     width: 100%;
-    height: 180px;
+    height: 100%;
     object-fit: cover;
 }
 .tip-overlay {
@@ -152,17 +157,32 @@ body{
         width: 45%;
         margin: 1rem auto;
     }
-}
-
-@media screen and (max-width: 600px) {
-    .cards-container {
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
+    .side-nav{
+        width: 10%;
+        margin: 1rem auto;
     }
-
-    .card {
-        width: 90%;
-        margin: 1rem 0;
+}
+@media screen and (max-width: 600px) {
+    .main-header{
+        padding: 8px;
+        font-size: 13px;
+    }
+    .side-nav {
+    width: 16%;
+    padding: 8px;
+    font-size: 13px;
+    top: 190px;
+}
+.card h2 {
+    font-size: 20px;
+}
+.cards-container {
+    flex-direction: column;
+    align-items: center;
+    padding: 2px;
+    }
+.card {
+    width: 90%;
+    margin: 1rem 0;
     }
 }
