--- a/q3/style.css
+++ b/q3/style.css
@@ -57,6 +57,7 @@ select {
     box-sizing: border-box;
 }
 button {
+    background-color: #003366;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
